myteo/test/analyze/main_function/missing_main.exp
ERROR: test/analyze/main_function/missing_main.myte:2:0 No main function found in program
 2 | 
   | ^